--- a/templates/index.html
+++ b/templates/index.html
@@ -2,17 +2,17 @@
 {% block title %}WELCOME{% endblock%}
 {% block body %} 
 <h1>Example user work!</h1>
-<form action="/questions/submitted" method="post">
+<form action="/questions" method="post">
     <p>
         <input name="age" placeholder="Age: " type="text"/>
         <input name="height" placeholder="Height" type='text'/>
         <input name="weight" placeholder="Weight" type='text'/>
         <select name="comp_select" class="selectpicker form-control">
-            <option value="small">1.2 Sedentary: Little or no physical activity</option>
-            <option value="little">1.3 Lightly Active: Light exercise or activity 1-3 days per week</option>
-            <option value="medium">1.5 Moderately Active: Moderate exercise or activity 3-5 days per week</option>
-            <option value="more">1.7 Very Active: Hard exercise or activity 6-7 days per week</option>
-            <option value="lot">1.9 Extremely Active: Hard daily exercise or activity and physical work</option>
+            <option value="1.2 Sedentary: Little or no physical activity">small</option>
+            <option value="1.3 Lightly Active: Light exercise or activity 1-3 days per week">little</option>
+            <option value="1.5 Moderately Active: Moderate exercise or activity 3-5 days per week">medium</option>
+            <option value="1.7 Very Active: Hard exercise or activity 6-7 days per week">big</option>
+            <option value="1.9 Extremely Active: Hard daily exercise or activity and physical work">large</option>
         </select>
         <select name="gender" class="selectpicker form-control">
             <option value="female">Female</option>
