--- a/templates/home.html
+++ b/templates/home.html
@@ -1,75 +1,6 @@
 <head>
-    <style>
-        ul {
-          list-style-type: none;
-          margin: 0;
-          padding: 0;
-          overflow: hidden;
-        }
-        nav {
-            padding: 25px 0;
-        }
-
-        li {
-          float: left;
-        }
-
-        li a {
-          display: block;
-          color: white;
-          text-align: center;
-          padding: 9px 16px;
-          text-decoration: none;
-        }
-
-        .active {
-          background-color: #4CAF50;
-        }
-        form{
-            display: inline;
-            margin: 0;
-        }
-        input[type = submit] {
-            background: none;
-            border: 3px solid black;
-            color: white;
-            font-weight: bold;
-            font-size: 15px;
-            cursor: pointer;
-            padding: 7px 40px;
-            border-radius: 7px;
-            transition: 0.5s;
-        }
-        input[type=submit]:hover {
-            background: black;
-            color: white;
-        }
-        
-    </style>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'style.css') }}" media="screen" />
 </head>
 <body style="margin=0; padding: 0">
-    <header style = 'background: #721731'>
-        <center>
-            <nav style='width: 70%; margin: 0px auto;'>
-                <ul>
-                    <li><a class="active" href="/">Home</a></li>
-                    <li><a href="/menu">Daily Menu</a></li>
-                    <li style="float:right">
-                        <form action="/" method="post">
-                            <input name="login" placeholder="Login: " type="text"/>
-                            <input name="password" placeholder="Password: " type='text'/>
-                            <input type="submit" value="Login"/>
-                        </form>
-                        <span style="margin-left: 55px; color: white;">New here?
-                            <a style="display: inline" href="/register">
-                                <input type="submit" value="Register!"/>
-                            </a>
-                        </span>
-                    </li>
-            </nav>
-        </center>
-        <div style='margin: 0; display:flex; justify-content: space-around; align-items: center; padding: 50px; background: #333333; color: white;'>
-            <center><h1>Nutrition</h1></center>
-        </div>
-    </header>
+    {% include 'header.html' %}
 </body>
