Session, access to routes, some html changes

--- a/templates/header.html
+++ b/templates/header.html
@@ -4,25 +4,35 @@
             <ul>
                 <li><a class="active" href="/">Home</a></li>
                 <li><a href="/menu">Daily Menu</a></li>
-                <li style="float:right">
-                    <form action="/" method="post">
-                        <input name="login" placeholder="Login: " type="text"/>
-                        <input name="password" placeholder="Password: " type='text'/>
-                        <input type="submit" value="Login"/>
-                    </form>
-                    <span style="margin-left: 35px; color: white;">New here?
-                        <a style="display: inline; padding: 9px 3px;" href="/register">
-                            <input type="submit" value="Register!"/>
-                        </a>
-                    </span>
-                    <span>
-                    </span>
-                </li>
-                <li style="float:right"><a href="/profile">Profile or</a></li>
+                {% if username %} 
+                    <li style="float:right"><a href="/logout">Logout</a></li>
+                    <li style="float:right"><a href="/profile">Profile ({{username}})</a></li>
+                {% else %}
+                    <li style="float:right">
+                        <form action="/" method="post">
+                            <input name="login" placeholder="Login: " type="text"/>
+                            <input name="password" placeholder="Password: " type='text'/>
+                            <input type="submit" value="Login"/>
+                        </form>
+                        <span style="margin-left: 35px; color: white;">New here?
+                            <a style="display: inline; padding: 9px 3px;" href="/register">
+                                <input type="submit" value="Register!"/>
+                            </a>
+                        </span>
+                        <span>
+                        </span>
+                    </li>
+                {% endif %}
+            </ul>
         </nav>
     </center>
     <div style='margin: 0; display:flex; justify-content: space-around; align-items: center; padding: 50px; background: #333333; color: white;'>
         <center><h1>{{title}}</h1></center>
+    </div>
+    <div>
+        {% for user in users %}            
+            <p> {{user.login}} </p>
+        {% endfor %}
     </div>
 </header>
 
