--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,6 +6,7 @@
     
     {% include 'header.html' %}
 
+    <center><h1>Hello {{username}}</h1></center>
     <main>
         <form action="/profile" method="post">
             {% include 'parameters_form.html' %}
