--- a/templates/header.html
+++ b/templates/header.html
@@ -4,6 +4,8 @@
             <ul>
                 <li><a class="active" href="/">Home</a></li>
                 <li><a href="/menu">Daily Menu</a></li>
+                <li><a href="/menuopt">Own Dish</a></li>
+
                 {% if username %} 
                     <li style="float:right"><a href="/logout">Logout</a></li>
                     <li style="float:right"><a href="/profile">Profile ({{username}})</a></li>
