--- a/templates/menuoptional.html
+++ b/templates/menuoptional.html
@@ -6,8 +6,8 @@
         <title>SOME SHIT</title>
     </head>
     <body>
-        <form action="/next/choice" method="post">
-        <input name="keyword" placeholder="Key words (up to 3)" type='text'/>
-        <a href = "productsearch.html">Найдется всё</a>
+        <form action="/menuopt" method="post">
+        <input name="keyword" placeholder="Enter your product" type='text'/>
+        <a href = "/menuopt/choice">Next</a>
         </form>
 </html>
