--- a/templates/productsearch.html
+++ b/templates/productsearch.html
@@ -7,31 +7,15 @@
     </head>
     <body>
         <h1>Your nutrition table</h1>
-        <table align="center" cellspacing="10" border="10" cellpadding="5" width="600" bgcolor="#add8e6", height="100%">
-            <tr>
-                <th>1:</th>
-                <td>{p1:}</td>
-              </tr>
-              <tr>
-                <th>2:</th>  
-                <td>{p2:}</td>      
-              </tr>  
-              <tr>
-                <th>3:</th>  
-                <td>{p3:}</td>      
-              </tr>  
-              <tr>
-                <th>4:</th>  
-                <td>{p4:}</td>      
-              </tr>  
-            </table>
-        <form action="/next/choice/next" method="post">
+        <form action="/menuopt/choice" method="post">
                 <select name="menu" class="selectpicker form-control">
-                <option value="first">1</option>
-                <option value="second">2</option>
-                <option value="third">3</option>
-                <option value="fourth">4</option>
+                  {% for pr in vars %}
+                  <option value="first">{{ pr }}</option>
+                  {% endfor %}
             </select>
-            <a href = "base.html">Найдется всё</a>
+            <input name="keyword" placeholder="Enter weight in grams" type='text'/>
+            <a href = "/menuopt">Add more products</a>
+            <a href = "/menu">Finish</a>
+
           </form>
 </html>
