--- a/templates/header.html
+++ b/templates/header.html
@@ -4,11 +4,13 @@
             <ul>
                 <li><a class="active" href="/">Home</a></li>
                 <li><a href="/menu">Daily Menu</a></li>
-                <li><a href="/menuopt">Own Dish</a></li>
+                <li><a href="/final">FInal Menu For Today</a></li>
+                <!-- <li><a href="/menuopt">Add My Dish to Menu</a></li> -->
 
                 {% if username %} 
                     <li style="float:right"><a href="/logout">Logout</a></li>
                     <li style="float:right"><a href="/profile">Profile ({{username}})</a></li>
+                    <li><a href="/menuopt">Add My Dish to Menu</a></li>
                 {% else %}
                     <li style="float:right">
                         <form action="/" method="post">
