--- a/templates/productsearch.html
+++ b/templates/productsearch.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>SOME SHIT</title>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'style.css') }}" media="screen" />
+        <title>Product Search</title>
     </head>
     <body>
+        {% include 'header.html' %}
         <h1>Your nutrition table</h1>
         <form action="/menuopt/subm/choice" method="post">
                 <select name="menu" class="selectpicker form-control">
