--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
         <h2> Menu 3: {{menu3}} </h2>
         <h2> Menu 4: {{menu4}} </h2>
         {% else %}
-        <h1>You have no menu yet</h1>
+        <h1>You have no menu yet. Generate it below!</h1>
         {% endif %}
         <form action="/menu" method="post">
 
