--- a/templates/home.html
+++ b/templates/home.html
@@ -4,4 +4,21 @@
 <body style="margin=0; padding: 0">
     {% include 'header.html' %}
     {% include 'message_box.html' %}
+
+    {% if message %} 
+    <center>{{message}}</center>
+    {% endif %}
+
+    {% if not username %} 
+    <form action="/" method="post">
+        <input name="login" placeholder="Login: " type="text"/>
+        <input name="password" placeholder="Password: " type='text'/>
+        <input type="submit" value="Login"/>
+    </form>
+    <span style="margin-left: 35px; color: white;">New here?
+        <a style="display: inline; padding: 9px 3px;" href="/register">
+            <input type="submit" value="Register!"/>
+        </a>
+    </span>
+    {% endif %}
 </body>
