--- a/templates/added_products.html
+++ b/templates/added_products.html
@@ -2,7 +2,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'style.css') }}" media="screen" />
 </head>
 
-<body style="margin=0; padding: 0">
+<body style="margin:0; padding: 0">
     {% include 'header.html' %}
     <main>
         <form action="/menuopt/subm/choice" method="post">
@@ -10,7 +10,7 @@
             {% for pr in vars %}
             <h>{{ pr }}</h>
             {% endfor %}
-            <a href = "/menuopt">Add more products</a>
+            <a href="/menuopt">Add more products</a>
         </form>
     </main>
 </body>
