--- a/templates/registration.html
+++ b/templates/registration.html
@@ -2,15 +2,15 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'style.css') }}" media="screen" />
 </head>
 
-<body style="margin=0; padding: 0">
+<body style="margin:0; padding: 0">
     {% include 'header.html' %}
     <main>
         <form action="/registration/submitted" method="post">
-            <input name="login" placeholder="Login: " type="text"/>
-            <input name="password" placeholder="Password: " type='text'/><br>
+            <input name="login" placeholder="Login: " type="text" />
+            <input name="password" placeholder="Password: " type='text' /><br>
             {% include 'parameters_form.html' %}
-            
-            <input class = clicker type="submit" value="Register"/>
+
+            <input class=clicker type="submit" value="Register" />
         </form>
     </main>
 </body>
