--- a/templates/dishtoday.html
+++ b/templates/dishtoday.html
@@ -24,7 +24,7 @@
         </div>
         <!--<h2> Menu 2: {{menu2}} </h2>-->
         <!--<h2> Menu 3: {{menu3}} </h2>-->
-        <h1>You'll eat this much</h1>
+        <h1 style="margin-top: 50px">You'll eat this much</h1>
         <h2> Calories: {{cal}} </h2>
         <h2> Proteins: {{prot}} </h2>
         <h2> Fats: {{fats}} </h2>
