--- a/templates/home.html
+++ b/templates/home.html
@@ -23,4 +23,13 @@
         </div>
     </div>
     {% endif %}
+    <div style="width: 70%; margin:0 auto; color: white">
+
+        <h1>You daily intake:</h2>
+        <h2>Calories: {{ normas[0] }}</h2>
+        <h2>Proteins: {{normas[1]}}</h2>
+        <h2>Fats: {{normas[2]}}</h2>
+        <h2>Carbohydrates: {{normas[3]}}</h2>
+    </div>
+
 </body>
